src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loan_Product?ID=&apos;+Id, &quot;Edit&quot; ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Name__c</fullName>
        <label>Check Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Term__c</fullName>
        <label>Full_Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <defaultValue>$Setup.IR__c.Annual_UK__c</defaultValue>
        <label>Interest Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_type__c</fullName>
        <label>Interest type</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Diminishing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Interest_rate__c</fullName>
        <label>Max Interest rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Interest_rate__c</fullName>
        <label>Min Interest Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name_VF__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loan_Product?ID=&apos;+Id,  Product_Name__c , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>AMP(or partner name) “Country code” – “Scheduled type” Repayment type Interest type, interest type. The name cannot be manually entered but it is automatically generated</description>
        <formula>TEXT(Country__c) &amp; &quot; - &quot; &amp; TEXT(Product_Type__c)&amp; &quot; - &quot; &amp; TEXT(Schedule_Type__c  )&amp; &quot;, &quot; &amp; TEXT(Interest_type__c)&amp; &quot; Interest &quot; &amp; TEXT(Interest_Rate__c*100)&amp; &quot;%, &quot; &amp; TEXT(Full_Term__c)</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Loan</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <picklist>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>210</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>240</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>270</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>365</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <validationRules>
        <fullName>CountryNotNone</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Country__c)  =  &apos;--None--&apos;</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Please choose country</errorMessage>
    </validationRules>
</CustomObject>